# Private-School-ERP-Finance-Software

./: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: ACCOUNTING_POSTING_RULES.md  ARCHITECTURE.md  BUDGET_ITEM_SYSTEM.md  BUTTON_TO_FORM_ACTION_MAP.md  DATA_CAPTURE_FORMS.md  INSTITUTION_CONTEXT.md  INTERNATIONAL_COUNTRY_TEMPLATE_SYSTEM.md  KITCHEN_STORES_ACCOUNTABILITY.md  LICENSE_SYSTEM.md  MULTILINGUAL_LOCALIZATION_SYSTEM.md  PHASE_2_ROADMAP.md  PRINT_PDF_BRANDING.md
src/: App.tsx  db.rs  index.css  main.rs  models.rs  schema.sql  services.rs  sql-js.d.ts
src/components/: FormModal.tsx  Header.tsx  Layout.tsx  NotificationCenter.tsx  OfflineIndicator.tsx  Sidebar.tsx
src/components/accounting/: TrialBalanceReport.tsx
src/components/ap/: APDashboard.tsx  BillEntry.tsx  PaymentRunUI.tsx  SupplierManager.tsx
src/components/assets/: AssetRegister.tsx  DepreciationRunner.tsx
src/data/: budgetItemLibrary.ts  countryTemplates.ts
src/database/: DatabaseService.ts  connection.ts  index.tsx  schema.ts  seed.ts
src/i18n/: index.ts  types.ts
src/pages/: AP.tsx  Accounting.tsx  Assets.tsx  Audit.tsx  BankRecon.tsx  Billing.tsx  Budget.tsx  Collections.tsx  Dashboard.tsx  Inventory.tsx  Invoices.tsx  Login.tsx  Payments.tsx  Payroll.tsx  Receipts.tsx  Reports.tsx  Scholarships.tsx  School.tsx  Settings.tsx  Students.tsx  Transport.tsx  Treasury.tsx
src/services/: BankReconciliationService.ts  InvoiceGenerationService.ts
src/store/: index.ts
src/types/: index.ts
(+29 files in other folders)
